# bread

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  THIRD-PARTY-LICENSES
docs/: COMMANDS.md
examples/: EXAMPLES.md  fs.bread  hello.bread
src/: cli.cpp  compiler.cpp  compiler.hpp  lib.rs  logger.rs  tests.cpp
src/gui/: gui.cpp
src_old/: compiler.hpp
